--- a/mesto-react/src/index.css
+++ b/mesto-react/src/index.css
@@ -40,6 +40,10 @@
 @import url(./blocks/popup/__button/_delite-card/popup__button_delite-card.css);
 @import url(./blocks/popup/__button/popup__button_valid.css);
 @import url(./blocks/popup/__button/popup__button_invalid.css);
+@import url(./blocks/popup-card-add/__container/popup-card-add__container.css);
+@import url(./blocks/popup-card-add/__title/popup-card-add__title.css);
+@import url(./blocks/popup-edit-profile/__container/popup-edit-profile__container.css);
+@import url(./blocks/popup-edit-profile/__title/popup-card-add__title.css);
 @import url(./blocks/popup-avatar/__container/popup-avatar__container.css);
 @import url(./blocks/popup-avatar/__title/popup-avatar__title.css);
 @import url(./blocks/popup-image/popup-image.css);
