--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -1,14 +1,14 @@
-.element__delite {
+.element__delete {
   position: absolute;
   top: 20px;
   right: 20px;
   width: 18px;
   height: 19px;
-  background: center/cover no-repeat url(../../../images/delite-card.svg);
+  background: center/cover no-repeat url(../../../images/delete-card.svg);
   border: none;
   cursor: pointer;
 }
 
-.element__delite:hover {
+.element__delete:hover {
   opacity: 0.6;
 }
