--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
 @import url(./blocks/element/__like/element__like.css);
 @import url(./blocks/element/__like/_active/element__like_active.css);
 @import url(./blocks/element/__delete/element__delete.css);
+@import url(./blocks/element/__delete/_hidden/element__delete_hidden.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__copiright/footer__copiright.css);
 @import url(./blocks/popup/popup.css);
